--- a/views/index.jade
+++ b/views/index.jade
@@ -6,9 +6,18 @@ html
     title Redis Server Stats
     link(rel='stylesheet', href='https://ajax.aspnetcdn.com/ajax/jquery.mobile/1.1.1/jquery.mobile-1.1.1.min.css')
     link(rel='stylesheet', href='style/app.css')
+    link(rel='stylesheet', href='https://raw.github.com/cubiq/add-to-homescreen/master/style/add2home.css')
     style
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
     script(src='https://ajax.aspnetcdn.com/ajax/jquery.mobile/1.1.1/jquery.mobile-1.1.1.min.js')
+    script(type='text/javascript')
+      var addToHomeConfig = {
+        returningVisitor: true,
+        animationIn: 'bubble',
+        animationOut: 'drop',
+        lifespan: 10000
+      }
+    script(src='https://raw.github.com/cubiq/add-to-homescreen/master/src/add2home.js')
     script(src='js/app.js')
   body
     //
