--- a/views/index.jade
+++ b/views/index.jade
@@ -15,7 +15,8 @@ html
         returningVisitor: true,
         animationIn: 'bubble',
         animationOut: 'drop',
-        lifespan: 10000
+        lifespan: 10000,
+        touchIcon: true
       }
     script(src='https://raw.github.com/cubiq/add-to-homescreen/master/src/add2home.js')
     script(src='js/app.js')
