--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,10 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    title Redis Server Stats
+    title Redis Server Stats''
+    link(rel='apple-touch-icon', href='images/touch-icon-iphone.png')
+    link(rel='apple-touch-icon', sizes='72x72' href='images/touch-icon-ipad.png')
+    link(rel='apple-touch-icon', sizes='114x114' href='images/touch-icon-iphone4.png')
     link(rel='stylesheet', href='https://ajax.aspnetcdn.com/ajax/jquery.mobile/1.1.1/jquery.mobile-1.1.1.min.css')
     link(rel='stylesheet', href='style/app.css')
     link(rel='stylesheet', href='https://raw.github.com/cubiq/add-to-homescreen/master/style/add2home.css')
