--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,7 @@ html
 
     link(rel='stylesheet', href='https://ajax.aspnetcdn.com/ajax/jquery.mobile/1.1.1/jquery.mobile-1.1.1.min.css')
     link(rel='stylesheet', href='style/app.css')
-    link(rel='stylesheet', href='https://raw.github.com/cubiq/add-to-homescreen/master/style/add2home.css')
+    link(rel='stylesheet', href='style/add2home.css')
     style
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
     script(src='https://ajax.aspnetcdn.com/ajax/jquery.mobile/1.1.1/jquery.mobile-1.1.1.min.js')
