--- a/views/index.jade
+++ b/views/index.jade
@@ -23,7 +23,7 @@ html
         lifespan: 10000,
         touchIcon: true
       }
-    script(src='https://raw.github.com/cubiq/add-to-homescreen/master/src/add2home.js')
+    script(src='js/add2home.js')
     script(src='js/app.js')
   body
     //
