changing flow to require a login as local storage is not going to work easily

--- a/views/index.jade
+++ b/views/index.jade
@@ -37,7 +37,7 @@ html
           | Redis stats
         a.ui-btn-right(data-role='button', data-transition='fade', href='#page2', data-icon='plus', data-iconpos='left')
           | Add
-      div(data-role='content', style='padding: 15px;')
+      div#sever_list(data-role='content', style='padding: 15px;')
         ul(data-role='listview', data-divider-theme='e', data-inset='true')
           li(data-role='list-divider', role='heading')
             | Servers
