added an accounts view section for account creation

--- a/views/login.jade
+++ b/views/login.jade
@@ -32,6 +32,8 @@ html
       div(data-theme='e', data-role='header')
         h3
          | Redis stats
+        a.ui-btn-right(data-role='button', data-transition='fade', href='/account/create', data-icon='plus', data-iconpos='left')
+          | Create Account
       div(data-role='content', style='padding: 15px;')
         form(action='login', method='POST', data-ajax='false')
           div(data-role='fieldcontain')
