--- a/views/login/index.jade
+++ b/views/login/index.jade
@@ -4,13 +4,13 @@ html
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title Login
-    link(rel='apple-touch-icon', href='images/touch-icon-iphone.png')
-    link(rel='apple-touch-icon', sizes='72x72', href='images/touch-icon-ipad.png')
-    link(rel='apple-touch-icon', sizes='114x114', href='images/touch-icon-iphone4.png')
+    link(rel='apple-touch-icon', href='/images/touch-icon-iphone.png')
+    link(rel='apple-touch-icon', sizes='72x72', href='/images/touch-icon-ipad.png')
+    link(rel='apple-touch-icon', sizes='114x114', href='/images/touch-icon-iphone4.png')
 
     link(rel='stylesheet', href='https://ajax.aspnetcdn.com/ajax/jquery.mobile/1.1.1/jquery.mobile-1.1.1.min.css')
-    link(rel='stylesheet', href='style/app.css')
-    link(rel='stylesheet', href='style/add2home.css')
+    link(rel='stylesheet', href='/style/app.css')
+    link(rel='stylesheet', href='/style/add2home.css')
     style
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
     script(src='https://ajax.aspnetcdn.com/ajax/jquery.mobile/1.1.1/jquery.mobile-1.1.1.min.js')
@@ -22,8 +22,8 @@ html
         lifespan: 10000,
         touchIcon: true
       }
-    script(src='js/add2home.js')
-    script(src='js/app.js')
+    script(src='/js/add2home.js')
+    script(src='/js/app.js')
               
   body
     //
@@ -35,12 +35,12 @@ html
         a.ui-btn-right(data-role='button', data-transition='fade', href='/account/create', data-icon='plus', data-iconpos='left')
           | Create Account
       div(data-role='content', style='padding: 15px;')
-        form(action='login', method='POST', data-ajax='false')
+        form(action='/login/login', method='POST', data-ajax='false')
           div(data-role='fieldcontain')
             fieldset(data-role='controlgroup')
               label(for='textinput1')
                 | Username
-              input#textinput1(name='user_name', placeholder='', value='', type='text')
+              input#textinput1(name='username', placeholder='', value='', type='text')
           div(data-role='fieldcontain')
             fieldset(data-role='controlgroup')
               label(for='textinput2')
