updated routes and error logic -- passportjs is now working

--- a/views/index.jade
+++ b/views/index.jade
@@ -10,13 +10,13 @@ html
     link(rel='apple-touch-icon', sizes='114x114', href='images/touch-icon-iphone4.png')
 
     link(rel='stylesheet', href='https://ajax.aspnetcdn.com/ajax/jquery.mobile/1.1.1/jquery.mobile-1.1.1.min.css')
-    link(rel='stylesheet', href='style/app.css')
-    link(rel='stylesheet', href='style/add2home.css')
+    link(rel='stylesheet', href='/style/app.css')
+    link(rel='stylesheet', href='/style/add2home.css')
     style
     script(src='http://yandex.st/json2/2011-10-19/json2.min.js')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
     script(src='https://ajax.aspnetcdn.com/ajax/jquery.mobile/1.1.1/jquery.mobile-1.1.1.min.js')
-    script(src='js/jstorage.min.js')
+    script(src='/js/jstorage.min.js')
     script(type='text/javascript')
       var addToHomeConfig = {
         returningVisitor: true,
@@ -25,8 +25,8 @@ html
         lifespan: 10000,
         touchIcon: true
       }
-    script(src='js/add2home.js')
-    script(src='js/app.js')
+    script(src='/js/add2home.js')
+    script(src='/js/app.js')
     // != js('eyeball')
   body
     //
